--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,8 @@
 - name: Home
   link: /
 - name: About
-  link: /about.html
+  link: about
+- name: "Project Team"
+  link: /project-team
+- name: "Principal Investigator"
+  link: /principal-investigator
